--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,6 +18,11 @@
         </div>
         <form style="width: 100%; max-width: 400px;" action="/login" method="POST">
           <h3 class="fw-normal mb-3 pb-3 text-center" style="letter-spacing: 1px;">Iniciar Sesión</h3>
+          {{#if error}}
+          <div class="alert alert-danger" role="alert">
+              {{error}}
+          </div>
+          {{/if}}
           <div class="form-outline mb-4">
             <input type="email" id="form2Example18" name="correo" class="form-control form-control-lg" required />
             <label class="form-label" for="form2Example18">Correo electrónico</label>
@@ -28,13 +33,12 @@
           </div>
           <div class="pt-1 mb-4">
             <button class="btn btn-info btn-lg btn-block w-100" type="submit" 
-             style="background-color: #0056b3; color: rgb(50, 44, 44); border: none;" onclick="ingresar()">Ingresar</button>
+             style="background-color: #0056b3; color: rgb(50, 44, 44); border: none;">Ingresar</button>
           </div>
           <p>¿No tienes una cuenta? <a href="/registro" class="link-info">Regístrate aquí</a></p>
         </form>
       </div>
   </div>
 </section>
-<script src="login.js"></script>
 </body>
 </html>
