--- a/views/partials/titulo.hbs
+++ b/views/partials/titulo.hbs
@@ -19,9 +19,9 @@
             </button>
 
             <ul class="dropdown-menu" aria-labelledby="userMenu">
-                <li><a class="dropdown-item" href="/perfil">Perfil</a></li>
-                <li><hr class="dropdown-divider"></li>
+               
                 <li><a class="dropdown-item text-danger" href="#" data-bs-toggle="modal" data-bs-target="#logoutModal">Cerrar sesión</a></li>
+                
             </ul>
         </div>
     </div>
@@ -48,9 +48,16 @@
 
             <script src="/js/bootstrap.bundle.min.js"></script>
             <script>
-            document.getElementById('confirmLogout').onclick = function() {
-            window.location.href = '/login';
-            };
+                document.getElementById('confirmLogout').onclick = function() {
+                // Hacer petición al endpoint de logout
+                fetch('/logout', {
+                    method: 'GET',
+                    credentials: 'same-origin'
+                }).then(() => {
+                    window.location.href = '/login';
+                });
+             };
+
             </script>
         <h1 class="el_titulo">Zteam </h1>
         <nav class="menu"> 
